[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "standards-sdk-py"
version = "0.1.1"
description = "Python SDK for Hedera standards and Registry Broker parity with TypeScript and Go SDKs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hashgraph Online" },
]
maintainers = [
  { name = "Hashgraph Online", email = "support@hol.org" },
]
keywords = [
  "hedera",
  "hcs",
  "hashgraph",
  "registry-broker",
  "mirror-node",
  "inscriber",
  "python-sdk",
  "ai-agents",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Typing :: Typed",
]
dependencies = [
  "brotli>=1.1.0,<2.0.0",
  "httpx>=0.27.2,<1.0.0",
  "hedera-sdk-py>=2.50.0,<3.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "typing-extensions>=4.12.2,<5.0.0",
]

[project.urls]
Homepage = "https://hol.org/docs/libraries/standards-sdk/"
Documentation = "https://hol.org/docs/libraries/standards-sdk/"
Repository = "https://github.com/hashgraph-online/standards-sdk-py"
Issues = "https://github.com/hashgraph-online/standards-sdk-py/issues"
Changelog = "https://github.com/hashgraph-online/standards-sdk-py/blob/main/CHANGELOG.md"
Security = "https://github.com/hashgraph-online/standards-sdk-py/security/policy"
Standards = "https://hol.org/docs/standards/"
"Registry Broker Docs" = "https://hol.org/registry/docs"
"CodeSandbox Examples" = "https://codesandbox.io/s/github/hashgraph-online/standards-sdk-py/tree/main/examples"
Libraries = "https://libraries.io/pypi/standards-sdk-py"

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.1,<5.0.0",
  "pip-audit>=2.8.0,<3.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.8.0,<0.9.0",
  "bandit[toml]>=1.7.10,<2.0.0",
  "twine>=6.0.1,<7.0.0",
]

[project.scripts]
standards-sdk-py-check-parity = "standards_sdk_py.parity.checker:main"
standards-sdk-py-generate-inventory = "standards_sdk_py.parity.inventory:main"

[tool.hatch.build.targets.wheel]
packages = ["src/standards_sdk_py"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ASYNC", "C4", "PIE", "RET"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = [
  "standards_sdk_py.registry_broker.sync_client",
  "standards_sdk_py.registry_broker.async_client",
]
disable_error_code = [
  "redundant-cast",
  "dict-item",
  "no-any-return",
  "unreachable",
  "arg-type",
  "attr-defined",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: marks tests requiring live credentials/network",
]

[tool.coverage.run]
branch = true
source = ["standards_sdk_py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist", "build"]
